[package]
name = "bitcasky"
version = "0.1.0"
edition = "2021"
resolver = "2"
license = "MIT"
repository = "https://github.com/ylgrgyq/bitcask"

[[test]]
name = "test_read_write"

[[test]]
name = "test_merge"

[dependencies]
bitcasky-common = { path = "lib/bitcasky-common", version = "0.1.0" }
bitcasky-database = { path = "lib/bitcasky-database", version = "0.1.0" }

bytes = "1.5.0"
thiserror = "1.0.53"
dashmap = "5.5.3"
log = "0.4.20"
parking_lot = { version = "0.12.1" }
uuid = { version = "1.6.1", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}

[dev-dependencies]
test-log = "0.2.11"
env_logger = "0.10.1"
utilities = { path = "./utilities" }

[workspace]
members = [
  "lib/*",
  "utilities",
]