[package]
name = "bitcask"
version = "0.1.0"
edition = "2021"

[[test]]
name = "test_read_write"

[[test]]
name = "test_merge"

[dependencies]
crc = "3.0.0"
walkdir = "2.3.2"
bytes = "1.3.0"
tempfile = "3.3.0"
thiserror = "1.0.38"
dashmap = "5.4.0"
base64 = "0.21.0"
log = "0.4.17"

[dev-dependencies]
test-log = "0.2.11"
env_logger = "*"
bitcask-tests = { version="0.1.0", path = "../bitcask-tests" }