[package]
name = "bitcask"
version = "0.1.0"
edition = "2021"

[[test]]
name = "test_read_write"

[[test]]
name = "test_merge"

[dependencies]
crc = "3.0.0"
walkdir = "2.3.2"
bytes = "1.3.0"
thiserror = "1.0.38"
dashmap = "5.4.0"
base64 = "0.21.0"
log = "0.4.17"
fs4 = "0.6.6"
parking_lot = { version = "0.12.1" }
crossbeam = "0.8.2"
crossbeam-channel = "0.5.8"
uuid = { version = "1.3.3", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}

[dev-dependencies]
test-log = "0.2.11"
env_logger = "*"
mockall = "0.11.4"
bitcask-tests = { version="0.1.0", path = "../bitcask-tests" }