[package]
name = "bitcasky-common"
version = "0.1.0"
resolver = "2"
edition = "2021"
license = "MIT"
repository = "https://github.com/ylgrgyq/bitcask"
description = "common part for bitcasky lib"

[dependencies]
crc = "3.0.0"
byteorder = "1.4"
bytes = "1.5.0"
thiserror = "1.0.53"
log = "0.4.20"
fs4 = "0.6.6"
# fs4 depends on rustix, but pulling this dependency explicitly into the tree
# to use direct functions on FreeBSD
rustix = { version = "0", features = [ "fs" ]}
parking_lot = { version = "0.12.1" }

[dev-dependencies]
test-log = "0.2.11"
env_logger = "*"
assert_matches = "1.5.0"
utilities = { path = "../../utilities" }