[package]
name = "common"
version = "0.1.0"

edition = "2021"

[dependencies]
crc = "3.0.0"
walkdir = "2.3.2"
bytes = "1.3.0"
thiserror = "1.0.38"
dashmap = "5.4.0"
base64 = "0.21.0"
log = "0.4.17"
fs4 = "0.6.6"
parking_lot = { version = "0.12.1" }

[dev-dependencies]
test-log = "0.2.11"
env_logger = "*"
criterion = "0.5"
tempfile = "3.3.0"
assert_matches = "1.5.0"
bitcask-tests = { version="0.1.0", path = "../bitcask-tests" }