[package]
name = "common"
version = "0.1.0"

edition = "2021"

[dependencies]
crc = "3.0.0"
bytes = "1.3.0"
thiserror = "1.0.38"
log = "0.4.17"
fs4 = "0.6.6"
# fs4 depends on rustix, but pulling this dependency explicitly into the tree
# to use direct functions on FreeBSD
rustix = { version = "0", features = [ "fs" ]}
parking_lot = { version = "0.12.1" }

[dev-dependencies]
test-log = "0.2.11"
env_logger = "*"
assert_matches = "1.5.0"
bitcask-tests = { version="0.1.0", path = "../bitcask-tests" }