[package]
name = "database"
version = "0.1.0"
resolver = "2"
edition = "2021"
license = "MIT"
repository = "https://github.com/ylgrgyq/bitcask"

[[bench]]
name = "mmap_data_storage"
harness = false

[lib]
bench = false

[dependencies]
common = { path = "../common" }

thiserror = "1.0.38"
memmap2 = "0.7.0"
dashmap = "5.4.0"
log = "0.4.17"
rand = "0.8"
parking_lot = { version = "0.12.1" }
crossbeam = "0.8.2"
crossbeam-channel = "0.5.8"

[dev-dependencies]
test-log = "0.2.11"
env_logger = "*"
criterion = "0.5"
tempfile = "3.3.0"
utilities = { path = "../../utilities" }