[package]
name = "common"
version.workspace = true
edition.workspace = true
license.workspace = true

description = "Common part for bitcasky lib"

[dependencies]
crc.workspace = true
byteorder.workspace = true
bytes.workspace = true
thiserror.workspace = true
log.workspace = true
fs4.workspace = true
rustix.workspace = true
parking_lot.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
test-log.workspace = true
env_logger.workspace = true
assert_matches.workspace = true
utilities.workspace = true